# tool

./: .dockerignore  .env.example  .gitignore  ANONYMIZATION_FLOW.en.md  ANONYMIZATION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cpud1openvas.csv  DEVELOPER_GUIDE.md  Dockerfile  Makefile  README.md  SECURITY.md  anon.py  anon.py.bak  anon_argparser_documentation.md  comandos.txt  config.py  deanonymize.py  diagnose_gpu.sh  docker-compose.yml  docker-entrypoint.sh  engine.py  get_metrics.py  get_runs_metrics.py  get_ticket_count.py  main.tex  numeros_sorteados.json  pyproject.toml  requirements.txt  run.sh  run_all_analyses.sh  run_all_strategies.sh  run_experiments.sh  test_optimization.py  word_list.example.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
anonlfi_1.0/: anon.py.bak
anonlfi_2.0/: README.md  anon.py  anon.py.bak  pyproject.toml
anonlfi_2.0/ground-truth/Anon artigo/exemplo_incidente/: anon_incidente_ssh .txt  entidades identificadas corretamente.xlsx  entidades_nao_identificadas.xlsx
anonlfi_2.0/ground-truth/Anon artigo/exemplo_vulnerabilidade/: anon_vulnerabilidadexml.xml  entities.csv  planilia_vulnerabilidade_openvas.xlsx  vulnerabilidadexml.xml
anonlfi_2.0/src/anon/: __init__.py
anonlfi_2.0/tests/: test_anon_integration.py
benchmark/: ADVANCED_FEATURES.md  BENCHMARK.md  CHANGELOG_v3.1.md  ESTIMATES.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SPEEDUP_PLOTS_GUIDE.md  VISUALIZATION_IMPROVEMENTS_v3.1.md  analyze_benchmark.py  analyze_benchmark_advanced.py  analyze_benchmark_scientific.py  benchmark.py  compile_vulnnet_csvs_fixed.py  debug_glm_train7.py  estimate.py  example_speedup_plot.py  generate_analysis_report.py  generate_heatmap_chart.py  run_full_benchmark.sh  test_scientific_viz.py  test_slm_regression.sh  verify_database_usage.py  visualization_individual.py
benchmark/ocr/: DATASET_LIMITATIONS.md  METHODOLOGY.md  REPORT.md  RESULTS_AUDIT.md  __main__.py  consolidate.py  datasets.py  metrics.py  report.py  run_ablation.sh  run_all_preprocess.sh  run_bid_after_chain.sh  run_vlm_grayscale.sh  runner.py
benchmark/visualization/: README.md  __init__.py  charts.py  config.py  statistics.py
benchmark_viability/: README.md  analyze_gt.py  collect_results.py  compute_metrics.py  run_viability.py
benchmark_viability/output/: VIABILITY_REPORT.md  viability_metrics.csv
docker/: DOCKERHUB_README.md  Dockerfile  RELEASE.md  docker-compose.bench.yml  docker-compose.yml  docker-entrypoint.sh  ocr-vllm.Dockerfile  ocr-vlm-v4.Dockerfile  ocr-vlm-v5.Dockerfile  run-docker.sh  run.ps1  run.sh
docs/: ADVANCED_OPTIONS.md  ANONYMIZATION_FLOW.en.md  ANONYMIZATION_FLOW.md  ANONYMIZATION_STRATEGIES.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  INDEX.md  OPTIMIZATION_SUMMARY.md  README.md  SLM_CACHE_IMPLEMENTATION.md  SLM_INTEGRATION_GUIDE.md  USE_DATASETS_FLAG.md  anon_argparser_documentation.md  cluster_analysis_documentation.md  diagrams.md
docs/developers/: ANONYMIZATION_STRATEGIES.md  ARCHITECTURE.md  EVALUATION_GUIDE.md  EXTENSIBILITY.md  OCR_ROADMAP.md  PDF_ENGINE_EVALUATION.md  SLM_INTEGRATION_GUIDE.md  UTILITY_SCRIPTS_GUIDE.md  WEB_SYSTEM_DESIGN.md  auto-mount-disks.sh  docker-loopback.sh
docs/users/: CLI_REFERENCE.md  CONFIGURATION_FILE.md  OCR_ENGINES.md
docs/web/: SETUP.md
examples/: anon_config.example.yaml  anonymization_config_cve.json  exemplo.docx  exemplo.xlsx  word_list.example.json
examples/patterns/: banking_pt.yaml
examples/profiles/: banking_pt.yaml
paper_data/: AVAILABILITY.md  EXPERIMENTS.md  README.md
paper_data/configs/: anonymization_config.json  anonymization_config_openvas.json
paper_data/dataset_statistics/: dataset_files_detailed.csv  dataset_statistics.csv  dataset_statistics.json  dataset_statistics_clean_130_targets.md  inventory - inventory.csv
paper_data/evaluation/: ANNOTATION_MANUAL.md  EVALUATION_DATA.md  numeros_sorteados.docx
paper_data/scripts/: analyze_all.sh  analyze_paper_results.sh  convert_d1_to_d1c.py  download_datasets.sh  extract_datasets.sh  reproduce_all_runs.sh  spot_check_claim1.sh  spot_check_claim3.sh  verify_d1_openvas_native_redaction.py
paper_data/test_minimal/: run_tests.sh
prompts/entity_detector/: v1_cyber_en.json  v1_en.json  v2_cyber_en.json  v3_cyber_en.json  (+1 more)
scripts/: QUICKSTART.md  README_DATASET_TOOLS.md  analyze_dataset.py  analyze_entity_map.py  analyze_json.py  check_dataset_status.py  cluster_entities.py  compile_vulnnet_csvs_fixed.py  complete_benchmark_workflow.sh  consolidate_all_reports.py  convert_dataset.py  create_ground_truth.py  deanonymize.py  estimate.py  estimate_regression.py  evaluate.py  export_and_clear_db.py  generate_cve_dataset.py  generate_heatmap_chart.py  get_runs_metrics.py  get_ticket_count.py  organize_paper_data.py  run_converted_datasets_benchmark.sh  run_ctciber_cve_benchmark.sh  run_full_benchmark.sh  run_readme_timed.sh  sample.py  slm_regex_generator.py  sortear.py  test_cluster_hyperparameters.py  utils.py
test_output_integration/: anon_test.csv
tests/: conftest.py  create_test_files.py  generate_large_test_file.py  test_analyze_json.py  test_anon_config.py  test_anon_integration.py  test_auto_batch_size.py  test_auto_quick.py  test_batch_override.py  test_batch_size_text_aware.py  test_config_file.py  test_csv_datasets.py  test_datasets_flag.py  test_datasets_large_csv.py  test_datasets_quick.py  test_deanonymization.py  test_entity_selection.py  test_entity_selection_empty.py  test_evaluation.py  test_evaluation_workflow.py  test_file_handle_closure.py  test_json_anonymization.py  test_model_registry.py  test_model_registry_all.py  test_ner_generation.py  test_new_config_logic.py  test_ocr_engines.py  test_ocr_preprocessor.py  test_output_directories.py  test_pii_leak.py  test_pt_br_ner.py  test_regex_strategy.py  test_secret_key_validation.py  test_security.py  test_slm_cache.py  test_slm_detector.py  test_slm_simple.py
web/: .env.example  Caddyfile  DEPLOY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
(+682 files in other folders)
