[project]
name = "anon"
version = "0.1.0"
description = "Anonimizador"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "presidio-analyzer[transformers]>=2.2.357",
    "presidio-anonymizer>=2.2.357",
    "protobuf>=6.30.1",
    "python-docx>=1.1.2",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.4.0",
    "PyMuPDF>=1.24.9",
    "lxml>=5.2.2",
    "ijson>=3.4.0.post0",
    "orjson>=3.11.4",
    "tenacity",
    "PyYAML>=6.0.1",
    "python-magic>=0.4.27",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",
    "grex>=1.0.1",
    "wordcloud>=1.9.3",
]
