[project]
name = "anonshield"
version = "0.1.0"
description = "Anonimizador"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "presidio-analyzer[transformers]>=2.2.357",
    "presidio-anonymizer>=2.2.357",
    "protobuf>=6.30.1",
    "python-docx>=1.1.2",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.4.0",
    "PyMuPDF>=1.24.9",
    "lxml>=5.2.2",
    "ijson>=3.4.0.post0",
    "orjson>=3.11.4",
    "tenacity",
    "PyYAML>=6.0.1",
    "python-magic>=0.4.27",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",
    "grex>=1.0.1",
    "wordcloud>=1.9.3",
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.33",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "torch>=2.6.0",
    "cupy-cuda12x==12.3.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
easyocr = ["easyocr>=1.7.0"]
paddleocr = ["paddleocr>=2.8.0", "paddlepaddle>=2.6.0"]
doctr = ["python-doctr[torch]>=0.8.0"]
kerasocr = ["keras-ocr>=0.9.3"]
ocr-all = ["easyocr>=1.7.0", "python-doctr[torch]>=0.8.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "slm: marks tests that require Ollama running (deselect with '-m not slm')",
    "ocr: marks tests that require OCR engines to be installed",
]
